--- a/pages/HEPB_form.html
+++ b/pages/HEPB_form.html
@@ -9,17 +9,18 @@
   <link rel="stylesheet" type="text/css" href="../css/main.css">
   <title>Hepatitis B Page</title>
 <style media="screen">
-form{
-  width: 25%;
+.container{
+  margin-bottom: 10px;
+  display: inline-block;
+  width: 100%;
 }
-label {
-      display: flex;
-      font-weight: bold;
-    }
+label, input{
+  display: inline-block;
+}
 
     input[type="text"],
     input[type="date"] {
-      width: 100%;
+      width: 50%;
       padding: 8px;
       box-sizing: border-box;
       border: 1px solid #ccc;
@@ -28,15 +29,6 @@ label {
 
     input[type="checkbox"] {
       margin-right: 5px;
-    }
-
-    input[type="submit"] {
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
     }
 
     input[type="submit"] {
@@ -75,107 +67,132 @@ label {
     </nav>
   <article class="col-9">
     <h2>Hepatitis B Infected Pregnant Woman Report Form</h2>
+<div class="container">
 
     <form action="#" method="post">
-    <label for="last-name">1. Last Name:</label>
-    <input type="text" id="last-name" name="last-name">
+      <div class="form-group">
+        <label for="last-name">1. Last Name:</label>
+        <input type="text" id="last-name" name="last-name">
+      </div>
+      <div class="form-group">
+        <label for="first-name">2. First Name:</label>
+        <input type="text" id="first-name" name="first-name">
+      </div>
+      <div class="form-group">
+        <label for="middle-name">3. Middle Name:</label>
+        <input type="text" id="middle-name" name="middle-name">
+      </div>
+      <div class="form-group">
+        <label for="date-of-birth">4. Date of Birth :</label>
+        <input type="date" id="date-of-birth" name="date-of-birth" >
+      </div>
+      <div class="form-group">
+        <label for="estimated-delivery-date">5. Estimated Delivery Date :</label>
+        <input type="date" id="estimated-delivery-date" name="estimated-delivery-date" >
+      </div>
+      <div class="form-group">
+        <label for="hepb-status-awareness">6. Patient aware of HepB+ status?</label>
+        <br>
+        <input type="checkbox" id="hepb-status-awareness-yes" name="hepb-status-awareness" value="Yes">
+        <label for="hepb-status-awareness-yes">Yes</label>
 
-    <label for="first-name">2. First Name:</label>
-    <input type="text" id="first-name" name="first-name">
+        <input type="checkbox" id="hepb-status-awareness-no" name="hepb-status-awareness" value="No">
+        <label for="hepb-status-awareness-no">No</label>
 
-    <label for="middle-name">3. Middle Name:</label>
-    <input type="text" id="middle-name" name="middle-name">
+        <input type="checkbox" id="hepb-status-awareness-unknown" name="hepb-status-awareness" value="Unknown">
+        <label for="hepb-status-awareness-unknown">Unknown</label>
+      </div>
+      <div class="form-group">
+        <label for="address">7. Address:</label>
+        <input type="text" id="address" name="address">
+      </div>
+      <div class="form-group">
+        <label for="city">8. City:</label>
+        <input type="text" id="city" name="city">
+      </div>
+      <div class="form-group">
+        <label for="state">9. State:</label>
+        <input type="text" id="state" name="state">
+      </div>
+      <div class="form-group">
+        <label for="zip">10. Zip:</label>
+        <input type="text" id="zip" name="zip">
+        </div>
+        <div class="form-group">
+          <label for="phone-number">11. Phone Number:</label>
+          <input type="text" id="phone-number" name="phone-number">
+        </div>
+        <div class="form-group">
+          <label for="phone-number">11. Phone Number:</label>
+          <input type="text" id="phone-number" name="phone-number">
+        </div>
+        <div class="form-group">
+          <label for="insurance-type">12. Type of Insurance:</label>
+          <br>
+          <input type="checkbox" id="insurance-type-private" name="insurance-type" value="Private">
+          <label for="insurance-type-private">Private</label>
 
-    <label for="date-of-birth">4. Date of Birth :</label>
-    <input type="date" id="date-of-birth" name="date-of-birth" >
+          <input type="checkbox" id="insurance-type-medicaid" name="insurance-type" value="Medicaid">
+          <label for="insurance-type-medicaid">Medicaid</label>
 
-    <label for="estimated-delivery-date">5. Estimated Delivery Date :</label>
-    <input type="date" id="estimated-delivery-date" name="estimated-delivery-date" >
+          <input type="checkbox" id="insurance-type-medicare" name="insurance-type" value="Medicare">
+          <label for="insurance-type-medicare">Medicare</label>
 
-    <label for="hepb-status-awareness">6. Patient aware of HepB+ status?</label>
-    <br>
-    <input type="checkbox" id="hepb-status-awareness-yes" name="hepb-status-awareness" value="Yes">
-    <label for="hepb-status-awareness-yes">Yes</label>
+          <input type="checkbox" id="insurance-type-uninsured" name="insurance-type" value="Uninsured">
+          <label for="insurance-type-uninsured">Uninsured</label>
 
-    <input type="checkbox" id="hepb-status-awareness-no" name="hepb-status-awareness" value="No">
-    <label for="hepb-status-awareness-no">No</label>
+          <input type="checkbox" id="insurance-type-unknown" name="insurance-type" value="Unknown">
+          <label for="insurance-type-unknown">Unknown</label>
+        </div>
+        <div class="form-group">
+          <label for="race">13. Race:</label>
+          <br>
+          <input type="checkbox" id="race-american-indian" name="race" value="American Indian/Alaskan Native">
+          <label for="race-american-indian">American Indian/Alaskan Native</label>
 
-    <input type="checkbox" id="hepb-status-awareness-unknown" name="hepb-status-awareness" value="Unknown">
-    <label for="hepb-status-awareness-unknown">Unknown</label>
+          <input type="checkbox" id="race-asian" name="race" value="Asian">
+          <label for="race-asian">Asian</label>
 
-    <label for="address">7. Address:</label>
-    <input type="text" id="address" name="address">
+          <input type="checkbox" id="race-black-african-am" name="race" value="Black/African Am">
+          <label for="race-black-african-am">Black/African American</label>
 
-    <label for="city">8. City:</label>
-    <input type="text" id="city" name="city">
+          <input type="checkbox" id="race-native-hawaiian-pacific-islander" name="race" value="Native Hawaiian/Pacific Islander">
+          <label for="race-native-hawaiian-pacific-islander">Native Hawaiian/Pacific Islander</label>
 
-    <label for="state">9. State:</label>
-    <input type="text" id="state" name="state">
+          <input type="checkbox" id="race-white" name="race" value="White">
+          <label for="race-white">White</label>
 
-    <label for="zip">10. Zip:</label>
-    <input type="text" id="zip" name="zip">
+          <input type="checkbox" id="race-other" name="race" value="Other">
+          <label for="race-other">Other</label>
 
-    <label for="phone-number">11. Phone Number:</label>
-    <input type="text" id="phone-number" name="phone-number">
+          <input type="checkbox" id="race-unknown" name="race" value="Unknown">
+          <label for="race-unknown">Unknown</label>
+        </div>
+        <div class="form-group">
+          <label for="hispanic">14. Hispanic:</label>
+          <br>
+          <input type="radio" id="hispanic-yes" name="hispanic" value="Yes">
+          <label for="hispanic-yes">Yes</label>
 
-    <label for="insurance-type">12. Type of Insurance:</label>
-    <br>
-    <input type="checkbox" id="insurance-type-private" name="insurance-type" value="Private">
-    <label for="insurance-type-private">Private</label>
+          <input type="radio" id="hispanic-no" name="hispanic" value="No">
+          <label for="hispanic-no">No</label>
 
-    <input type="checkbox" id="insurance-type-medicaid" name="insurance-type" value="Medicaid">
-    <label for="insurance-type-medicaid">Medicaid</label>
+          <input type="radio" id="hispanic-unknown" name="hispanic" value="Unknown">
+          <label for="hispanic-unknown">Unknown</label>
+        </div>
+        <div class="form-group">
+          <label for="country-of-birth">15. Country of Birth:</label>
+          <input type="text" id="country-of-birth" name="country-of-birth">
+        </div>
+        <div class="form-group">
+          <label for="primary-language">16. Primary Language:</label>
+          <input type="text" id="primary-language" name="primary-language">
 
-    <input type="checkbox" id="insurance-type-medicare" name="insurance-type" value="Medicare">
-    <label for="insurance-type-medicare">Medicare</label>
-
-    <input type="checkbox" id="insurance-type-uninsured" name="insurance-type" value="Uninsured">
-    <label for="insurance-type-uninsured">Uninsured</label>
-
-    <input type="checkbox" id="insurance-type-unknown" name="insurance-type" value="Unknown">
-    <label for="insurance-type-unknown">Unknown</label>
-
-    <label for="race">13. Race:</label>
-    <br>
-    <input type="checkbox" id="race-american-indian" name="race" value="American Indian/Alaskan Native">
-    <label for="race-american-indian">American Indian/Alaskan Native</label>
-
-    <input type="checkbox" id="race-asian" name="race" value="Asian">
-    <label for="race-asian">Asian</label>
-
-    <input type="checkbox" id="race-black-african-am" name="race" value="Black/African Am">
-    <label for="race-black-african-am">Black/African American</label>
-
-    <input type="checkbox" id="race-native-hawaiian-pacific-islander" name="race" value="Native Hawaiian/Pacific Islander">
-    <label for="race-native-hawaiian-pacific-islander">Native Hawaiian/Pacific Islander</label>
-
-    <input type="checkbox" id="race-white" name="race" value="White">
-    <label for="race-white">White</label>
-
-    <input type="checkbox" id="race-other" name="race" value="Other">
-    <label for="race-other">Other</label>
-
-    <input type="checkbox" id="race-unknown" name="race" value="Unknown">
-    <label for="race-unknown">Unknown</label>
-
-    <label for="hispanic">14. Hispanic:</label>
-    <br>
-    <input type="radio" id="hispanic-yes" name="hispanic" value="Yes">
-    <label for="hispanic-yes">Yes</label>
-
-    <input type="radio" id="hispanic-no" name="hispanic" value="No">
-    <label for="hispanic-no">No</label>
-
-    <input type="radio" id="hispanic-unknown" name="hispanic" value="Unknown">
-    <label for="hispanic-unknown">Unknown</label>
-
-    <label for="country-of-birth">15. Country of Birth:</label>
-    <input type="text" id="country-of-birth" name="country-of-birth">
-
-    <label for="primary-language">16. Primary Language:</label>
-    <input type="text" id="primary-language" name="primary-language">
-    <input type="checkbox" id="interpreter-needed" name="interpreter-needed">
-    <label for="interpreter-needed">Check if Interpreter Needed</label>
+        </div>
+        <div class="form-group">
+          <input type="checkbox" id="interpreter-needed" name="interpreter-needed">
+          <label for="interpreter-needed">Check if Interpreter Needed</label>
+        </div>
 
     <input type="submit" value="Submit">
   </form>
