--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Login Page</title>
 </head>
-<body style="background-color: black;">
+<body style="background-color: rgb(2, 15, 9);">
     <div class="headnav">
     <header>
       <h1>Login Page</h1>
